fix: OIDC environment クレーム追加

--- a/.github/workflows/unlock-state.yaml
+++ b/.github/workflows/unlock-state.yaml
@@ -11,6 +11,7 @@ on:
 jobs:
   unlock:
     runs-on: ubuntu-latest
+    environment: production
     permissions:
       id-token: write
       contents: read
