--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
   validate:
     name: Validate Terraform
     runs-on: ubuntu-latest
-    environment: production
+    environment: alz-mgmt-plan
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -52,7 +52,7 @@ jobs:
     needs: validate
     runs-on: ubuntu-latest
     concurrency: mgmt-tfstate
-    environment: production
+    environment: alz-mgmt-plan
     permissions:
       id-token: write
       contents: read
@@ -66,6 +66,13 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ vars.AZURE_CLIENT_ID }}
+          tenant-id: ${{ vars.AZURE_TENANT_ID }}
+          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
 
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
