--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,131 +21,13 @@ on:
         type: string
 
 jobs:
-  plan:
-    name: Plan with Terraform
-    runs-on: ubuntu-latest
-    concurrency: mgmt-tfstate
-    environment: alz-mgmt-plan
+  plan_and_apply:
+    uses: shuhei0720org01/alz-mgmt-templates/.github/workflows/cd-template.yaml@main
+    name: 'CD'
     permissions:
       id-token: write
       contents: read
-    env:
-      ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID }}"
-      ARM_SUBSCRIPTION_ID: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
-      ARM_TENANT_ID: "${{ vars.AZURE_TENANT_ID }}"
-      ARM_USE_AZUREAD: true
-      ARM_USE_OIDC: true
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ vars.AZURE_CLIENT_ID }}
-          tenant-id: ${{ vars.AZURE_TENANT_ID }}
-          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
-          terraform_version: ${{ inputs.terraform_cli_version || 'latest' }}
-
-      - name: Terraform Init
-        run: |
-          terraform \
-          -chdir="." \
-          init \
-          -backend-config="resource_group_name=${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" \
-          -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" \
-          -backend-config="container_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_CONTAINER_NAME}}" \
-          -backend-config="key=terraform.tfstate"
-
-      - name: Terraform Plan for ${{ inputs.terraform_action == 'destroy' && 'Destroy' || 'Apply' }}
-        run: |
-          terraform \
-          -chdir="." \
-          plan \
-          -out=tfplan \
-          -input=false \
-          ${{ inputs.terraform_action == 'destroy' && '-destroy' || '' }}
-
-      - name: Create Module Artifact
-        run: |
-          $stagingDirectory = "staging"
-          New-Item -Path . -Name $stagingDirectory -ItemType "directory"
-          Copy-Item -Path "./*" -Exclude @(".git", ".terraform", ".github", $stagingDirectory) -Recurse -Destination "./$stagingDirectory"
-          $rootModuleFolderTerraformFolder = Join-Path -Path "./$stagingDirectory" -ChildPath "." -AdditionalChildPath ".terraform"
-          if(Test-Path -Path $rootModuleFolderTerraformFolder) {
-            Remove-Item -Path $rootModuleFolderTerraformFolder -Recurse -Force
-          }
-        shell: pwsh
-
-      - name: Publish Module Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: module
-          path: ./staging/
-
-      - name: Show the Plan for Review
-        run: |
-          terraform \
-          -chdir="." \
-          show \
-          tfplan
-
-  apply:
-    needs: plan
-    name: Apply with Terraform
-    runs-on: ubuntu-latest
-    concurrency: mgmt-tfstate
-    environment: alz-mgmt-apply
-    permissions:
-      id-token: write
-      contents: read
-    env:
-      ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID }}"
-      ARM_SUBSCRIPTION_ID: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
-      ARM_TENANT_ID: "${{ vars.AZURE_TENANT_ID }}"
-      ARM_USE_AZUREAD: true
-      ARM_USE_OIDC: true
-      AZAPI_RETRY_GET_AFTER_PUT_MAX_TIME: "60m"
-    steps:
-      - name: Download a Build Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: module
-
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ vars.AZURE_CLIENT_ID }}
-          tenant-id: ${{ vars.AZURE_TENANT_ID }}
-          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
-          terraform_version: ${{ inputs.terraform_cli_version || 'latest' }}
-
-      - name: Terraform Init
-        run: |
-          terraform \
-          -chdir="." \
-          init \
-          -backend-config="resource_group_name=${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" \
-          -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" \
-          -backend-config="container_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_CONTAINER_NAME}}" \
-          -backend-config="key=terraform.tfstate"
-
-      - name: Terraform ${{ inputs.terraform_action == 'destroy' && 'Destroy' || 'Apply' }}
-        run: |
-          terraform \
-          -chdir="." \
-          apply \
-          -input=false \
-          -auto-approve \
-          tfplan
+    with:
+      terraform_action: ${{ inputs.terraform_action }}
+      root_module_folder_relative_path: '.'
+      terraform_cli_version: ${{ inputs.terraform_cli_version }}
