--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,110 +13,13 @@ on:
         type: string
 
 jobs:
-  validate:
-    name: Validate Terraform
-    runs-on: ubuntu-latest
-    environment: alz-mgmt-plan
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
-          terraform_version: ${{ inputs.terraform_cli_version || 'latest' }}
-
-      - name: Terraform Format Check
-        run: |
-          terraform \
-          -chdir="." \
-          fmt \
-          -check
-
-      - name: Terraform Init
-        run: |
-          terraform \
-          -chdir="." \
-          init \
-          -backend=false
-
-      - name: Terraform Validate
-        run: |
-          terraform \
-          -chdir="." \
-          validate
-
-  plan:
-    name: Validate Terraform Plan
-    needs: validate
-    runs-on: ubuntu-latest
-    concurrency: mgmt-tfstate
-    environment: alz-mgmt-plan
+  validate_and_plan:
+    uses: shuhei0720org01/alz-mgmt-templates/.github/workflows/ci-template.yaml@main
+    name: 'CI'
     permissions:
       id-token: write
       contents: read
       pull-requests: write
-    env:
-      ARM_CLIENT_ID: "${{ vars.AZURE_CLIENT_ID }}"
-      ARM_SUBSCRIPTION_ID: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
-      ARM_TENANT_ID: "${{ vars.AZURE_TENANT_ID }}"
-      ARM_USE_AZUREAD: true
-      ARM_USE_OIDC: true
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ vars.AZURE_CLIENT_ID }}
-          tenant-id: ${{ vars.AZURE_TENANT_ID }}
-          subscription-id: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
-          terraform_version: ${{ inputs.terraform_cli_version || 'latest' }}
-
-      - name: Terraform Init
-        run: |
-          terraform \
-          -chdir="." \
-          init \
-          -backend-config="resource_group_name=${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" \
-          -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" \
-          -backend-config="container_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_CONTAINER_NAME}}" \
-          -backend-config="key=terraform.tfstate"
-
-      - name: Terraform Plan
-        id: plan
-        run: |
-          terraform \
-          -chdir="." \
-          plan \
-          -input=false
-
-      - name: Update Pull Request
-        if: (success() || failure()) && github.event_name == 'pull_request'
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `#### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-
-            <details><summary>Run details</summary>
-
-            The plan was a ${{ steps.plan.outcome }} see the action for more details.
-
-            </details>
-
-            *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
+    with:
+      root_module_folder_relative_path: '.'
+      terraform_cli_version: ${{ inputs.terraform_cli_version }}
