feat: Chapter 12-17全面改訂完了
Azure公式Bootstrap手順に基づいた実践・運用編の全面改訂

## 変更内容

### 新章構成（6章）

#### GitHub Actions編
- Chapter 12: GitHub Actions基礎 (1,061行)
  - GitHub Actionsの仕組み、ワークフロー構文、OIDC認証、Secrets管理
- Chapter 13: CI/CDパイプライン構築 (1,216行)
  - 再利用可能ワークフロー、環境設定、Plan/Apply自動化、本番運用設計

#### Bootstrap実践編
- Chapter 14: Bootstrap Phase 1 (977行)
  - 前提条件、Starter Module選択、Bootstrap環境セットアップ、Phase 1デプロイ
- Chapter 15: Bootstrap Phase 2 (1,134行)
  - Landing Zonesデプロイ、デプロイ後検証、カスタマイズ、トラブルシューティング

#### 運用編
- Chapter 16: 運用管理の基礎 (1,295行)
  - 日常運用タスク、変更管理フロー、リソース追加・削除、ポリシー更新管理
- Chapter 17: 運用の自動化と効率化 (1,375行)
  - 運用自動化設計、モニタリング・アラート、コスト最適化、ベストプラクティス

合計: 7,058行

### 主な改善点

- Azure公式Bootstrap手順に完全準拠
- カジュアル敬語調（Chapter 01準拠）を徹底
- 実践的なコード例とコマンド例を大幅追加
- Mermaid図による視覚的説明を強化
- タブとアドモニションで見やすく整理

### 旧ファイル

以下を.old拡張子でバックアップ：
- 12_GitHub_Actions.md.old (1,326行)
- 13_デプロイ手順.md.old (1,248行)
- 14_トラブルシューティング.md.old (1,205行)
- 15_カスタマイズ.md.old (1,029行)
- 16_ベストプラクティス.md.old (1,191行)
- 17_FAQ.md.old (1,321行)

### その他の変更

- mkdocs.yml: ナビゲーション構成を更新
- index.md: 新章構成に合わせてリンクを更新
- 00_はじめに.md, 11_Virtual_WAN.md: リンク修正

## ビルドテスト

✅ mkdocs build --strict: 成功

--- a/docs-site/mkdocs.yml
+++ b/docs-site/mkdocs.yml
@@ -126,11 +126,12 @@ nav:
     - 09. 管理リソース: 09_管理リソース.md
     - 10. Hub-and-Spoke: 10_Hub-and-Spoke.md
     - 11. Virtual WAN: 11_Virtual_WAN.md
-  - 実践編:
-    - 12. GitHub Actions: 12_GitHub_Actions.md
-    - 13. デプロイ手順: 13_デプロイ手順.md
+  - GitHub Actions編:
+    - 12. GitHub Actions基礎: 12_GitHub_Actions.md
+    - 13. CI/CDパイプライン構築: 13_CI_CD_パイプライン構築.md
+  - Bootstrap実践編:
+    - 14. Bootstrap Phase 1: 14_Bootstrap_Phase_1.md
+    - 15. Bootstrap Phase 2: 15_Bootstrap_Phase_2.md
   - 運用編:
-    - 14. トラブルシューティング: 14_トラブルシューティング.md
-    - 15. カスタマイズ: 15_カスタマイズ.md
-    - 16. ベストプラクティス: 16_ベストプラクティス.md
-    - 17. FAQ: 17_FAQ.md
+    - 16. 運用管理の基礎: 16_運用管理の基礎.md
+    - 17. 運用の自動化と効率化: 17_運用の自動化と効率化.md
