--- a/docs-site/mkdocs.yml
+++ b/docs-site/mkdocs.yml
@@ -34,6 +34,7 @@ theme:
     - navigation.sections
     - navigation.expand
     - navigation.top
+    - navigation.indexes
     - search.suggest
     - search.highlight
     - content.code.copy
