docs: Chapter 06 v2完全版を追加（全ファイル・全コード解説）

--- a/docs-site/mkdocs.yml
+++ b/docs-site/mkdocs.yml
@@ -124,6 +124,7 @@ nav:
   - モジュール編:
     - 06. 設定テンプレート: 06_設定テンプレート.md
     - 06. 設定テンプレート（新版）: 06_設定テンプレートnew.md
+    - 06. 設定テンプレート（v2完全版）: 06_設定テンプレートv2.md
     - 07. リソースグループ: 07_リソースグループ.md
     - 08. 管理グループとポリシー: 08_管理グループとポリシー.md
     - 09. 管理リソース: 09_管理リソース.md
