docs: Chapter 07 v2を追加（リソースグループ完全解説）

--- a/docs-site/mkdocs.yml
+++ b/docs-site/mkdocs.yml
@@ -124,6 +124,7 @@ nav:
   - モジュール編:
     - 06. 設定テンプレート: 06_設定テンプレート.md
     - 07. リソースグループ: 07_リソースグループ.md
+    - 07. リソースグループ（v2）: 07_リソースグループv2.md
     - 08. 管理グループとポリシー: 08_管理グループとポリシー.md
     - 09. 管理リソース: 09_管理リソース.md
     - 10. Hub-and-Spoke: 10_Hub-and-Spoke.md
