docs: Chapter 08 v2を追加（管理グループとポリシー完全解説）

--- a/docs-site/mkdocs.yml
+++ b/docs-site/mkdocs.yml
@@ -126,6 +126,7 @@ nav:
     - 07. リソースグループ: 07_リソースグループ.md
     - 07. リソースグループ（v2）: 07_リソースグループv2.md
     - 08. 管理グループとポリシー: 08_管理グループとポリシー.md
+    - 08. 管理グループとポリシー（v2）: 08_管理グループとポリシーv2.md
     - 09. 管理リソース: 09_管理リソース.md
     - 10. Hub-and-Spoke: 10_Hub-and-Spoke.md
     - 11. Virtual WAN: 11_Virtual_WAN.md
