--- a/docs-site/mkdocs.yml
+++ b/docs-site/mkdocs.yml
@@ -126,6 +126,7 @@ nav:
     - 07. リソースグループ: 07_リソースグループ.md
     - 08. 管理グループとポリシー: 08_管理グループとポリシー.md
     - 08. 管理グループとポリシー（v2）: 08_管理グループとポリシーv2.md
+    - 08. 管理グループとポリシー（v3）: 08_管理グループとポリシーv3.md
     - 09. 管理リソース: 09_管理リソース.md
     - 09. 管理リソース（v2）: 09_管理リソースv2.md
     - 10. Hub-and-Spoke: 10_Hub-and-Spoke.md
