docs: ドキュメント構成を更新し、実践編を追加
- mkdocs.yml: ナビゲーションを実際のファイル構成に合わせて更新
- index.md: 学習の進め方を6レベルから5レベルに再編成
  - レベル1: 基礎固め (00-01)
  - レベル2: 実践編追加 (02-04)
  - レベル3: 設定編 (05-08)
  - レベル4: モジュール編 (09-13)
  - レベル5: GitHub Actions編 (14-15)
- 章番号を現在のファイル構成に合わせて修正
- 存在しないVirtual WAN章と運用マスター章を削除
- Bastion Host SKU設定をBasicに変更 (Japan Eastリージョン対応)

--- a/docs-site/mkdocs.yml
+++ b/docs-site/mkdocs.yml
@@ -116,24 +116,21 @@ nav:
   - 基礎編:
     - 00. はじめに: 00_はじめに.md
     - 01. 基礎知識: 01_基礎知識.md
-    - 02. プロジェクト構造: 02_プロジェクト構造.md
+  - 実践編:
+    - 02. IaCのランディングゾーン環境を作ってみよう: 02_IaCのランディングゾーン環境を作ってみよう.md
+    - 03. IaCのランディングゾーン環境を作ってみよう(続き): 03_IaCのランディングゾーン環境を作ってみよう(続き).md
+    - 04. IaCランディングゾーンの運用管理: 04_IaCランディングゾーンの運用管理.md
   - 設定編:
-    - 03. 設定ファイル完全解説: 03_設定ファイル完全解説.md
-    - 04. 変数定義: 04_変数定義.md
-    - 05. ローカル変数: 05_ローカル変数.md
+    - 05. プロジェクト構造: 05_プロジェクト構造.md
+    - 06. 設定ファイル完全解説: 06_設定ファイル完全解説.md
+    - 07. 変数定義: 07_変数定義.md
+    - 08. ローカル変数: 08_ローカル変数.md
   - モジュール編:
-    - 06. 設定テンプレート: 06_設定テンプレート.md
-    - 07. リソースグループ: 07_リソースグループ.md
-    - 08. 管理グループとポリシー: 08_管理グループとポリシー.md
-    - 09. 管理リソース: 09_管理リソース.md
-    - 10. Hub-and-Spoke: 10_Hub-and-Spoke.md
-    - 11. Virtual WAN: 11_Virtual_WAN.md
+    - 09. 設定テンプレート: 09_設定テンプレート.md
+    - 10. リソースグループ: 10_リソースグループ.md
+    - 11. 管理グループとポリシー: 11_管理グループとポリシー.md
+    - 12. 管理リソース: 12_管理リソース.md
+    - 13. Hub-and-Spoke: 13_Hub-and-Spoke.md
   - GitHub Actions編:
-    - 12. GitHub Actions基礎: 12_GitHub_Actions.md
-    - 13. CI/CDパイプライン構築: 13_CI_CD_パイプライン構築.md
-  - Bootstrap実践編:
-    - 14. Bootstrap Phase 1: 14_Bootstrap_Phase_1.md
-    - 15. Bootstrap Phase 2: 15_Bootstrap_Phase_2.md
-  - 運用編:
-    - 16. 運用管理の基礎: 16_運用管理の基礎.md
-    - 17. 運用の自動化と効率化: 17_運用の自動化と効率化.md
+    - 14. GitHub Actions基礎: 14_GitHub_Actions.md
+    - 15. CI/CDパイプライン構築: 15_CI_CD_パイプライン構築.md
