docs: フォーマットを整え、ナビゲーションの一貫性を向上させる

--- a/docs-site/mkdocs.yml
+++ b/docs-site/mkdocs.yml
@@ -26,7 +26,7 @@ theme:
       toggle:
         icon: material/brightness-4
         name: ライトモードに切り替え
-  
+
   features:
     - navigation.instant
     - navigation.tracking
@@ -93,7 +93,7 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/shuhei0720org01/alz-mgmt
-  
+
   analytics:
     feedback:
       title: このページは役に立ちましたか？
@@ -114,23 +114,23 @@ copyright: Copyright &copy; 2026 shuhei0720org01
 nav:
   - ホーム: index.md
   - 基礎編:
-    - 00. はじめに: 00_はじめに.md
-    - 01. 基礎知識: 01_基礎知識.md
+      - 00. はじめに: 00_はじめに.md
+      - 01. 基礎知識: 01_基礎知識.md
   - 実践編:
-    - 02. IaCのランディングゾーン環境を作ってみよう: 02_IaCのランディングゾーン環境を作ってみよう.md
-    - 03. IaCのランディングゾーン環境を作ってみよう(続き): 03_IaCのランディングゾーン環境を作ってみよう(続き).md
-    - 04. IaCランディングゾーンの運用管理: 04_IaCランディングゾーンの運用管理.md
+      - 02. IaCのランディングゾーン環境を作ってみよう: 02_IaCのランディングゾーン環境を作ってみよう.md
+      - 03. IaCのランディングゾーン環境を作ってみよう(続き): 03_IaCのランディングゾーン環境を作ってみよう(続き).md
+      - 04. IaCランディングゾーンの運用管理: 04_IaCランディングゾーンの運用管理.md
   - 設定編:
-    - 05. プロジェクト構造: 05_プロジェクト構造.md
-    - 06. 設定ファイル完全解説: 06_設定ファイル完全解説.md
-    - 07. 変数定義: 07_変数定義.md
-    - 08. ローカル変数: 08_ローカル変数.md
+      - 05. プロジェクト構造: 05_プロジェクト構造.md
+      - 06. 設定ファイル完全解説: 06_設定ファイル完全解説.md
+      - 07. 変数定義: 07_変数定義.md
+      - 08. ローカル変数: 08_ローカル変数.md
   - モジュール編:
-    - 09. 設定テンプレート: 09_設定テンプレート.md
-    - 10. リソースグループ: 10_リソースグループ.md
-    - 11. 管理グループとポリシー: 11_管理グループとポリシー.md
-    - 12. 管理リソース: 12_管理リソース.md
-    - 13. Hub-and-Spoke: 13_Hub-and-Spoke.md
-  - GitHub Actions編:
-    - 14. GitHub Actions基礎: 14_GitHub_Actions.md
-    - 15. CI/CDパイプライン構築: 15_CI_CD_パイプライン構築.md
+      - 09. 設定テンプレート: 09_設定テンプレート.md
+      - 10. リソースグループ: 10_リソースグループ.md
+      - 11. 管理グループとポリシー: 11_管理グループとポリシー.md
+      - 12. 管理リソース: 12_管理リソース.md
+      - 13. Hub-and-Spoke: 13_Hub-and-Spoke.md
+  - CI/CD編:
+      - 14. GitHub Actions基礎: 14_GitHub_Actions.md
+      - 15. CI/CDパイプライン構築: 15_CI_CD_パイプライン構築.md
